<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_photo_approvals"
        android:icon="@drawable/ic_nav_photo_library"
        android:title="@string/nav_photo_approvals" />

    <item
        android:id="@+id/nav_account_admin"
        android:icon="@drawable/ic_me_id_card"
        android:title="@string/nav_account_admin" />

    <item
        android:id="@+id/nav_order_admin"
        android:icon="@drawable/ic_me_receipt"
        android:title="@string/nav_order_admin" />

    <item
        android:id="@+id/nav_staff_chat"
        android:icon="@drawable/ic_nav_chat_bubble"
        android:title="@string/nav_chat_short" />

    <item
        android:id="@+id/nav_me"
        android:icon="@drawable/ic_me_account"
        android:title="@string/nav_me" />

</menu>